--- a/arch/arm64/configs/exynos9810-star2lte_defconfig
+++ b/arch/arm64/configs/exynos9810-star2lte_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.173 Kernel Configuration
+# Linux/arm64 4.9.185 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -45,7 +45,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -584,9 +584,9 @@ CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_LOD_SEC=y
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_LKM_BLOCK=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_LKM_BLOCK is not set
 # CONFIG_TIMA_LKMAUTH_CODE_PROT is not set
 CONFIG_UH=y
 CONFIG_UH_DEBUG=y
@@ -634,7 +634,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
-CONFIG_FOTA_LIMIT=y
+# CONFIG_FOTA_LIMIT is not set
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -1123,7 +1123,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
 # CONFIG_NET_NCSI is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1339,8 +1339,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_DEBUG_UID_CPUTIME=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
-CONFIG_TIMA_LOG=y
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -4603,7 +4602,7 @@ CONFIG_EXYNOS_MCINFO=y
 CONFIG_MCINFO_SYSFS=y
 CONFIG_EXYNOS_SECURE_LOG=y
 CONFIG_SAMSUNG_VST_CAL=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 CONFIG_EXYNOS_SMC_LOG_THRESHOLD=0
 CONFIG_EXYNOS_SNAPSHOT_LOGGING_SMC_CALL=y
 CONFIG_EXYNOS_HDCP2=y
@@ -5665,7 +5664,7 @@ CONFIG_CRYPTO=y
 #
 # Crypto core or helper
 #
-CONFIG_CRYPTO_FIPS=y
+# CONFIG_CRYPTO_FIPS is not set
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=y
